# soxai-playground

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  config.py  docker_manager.py  main.py  preview.py  pyproject.toml  session.py  terminal.py
nginx/: playground.conf
sandbox/: Dockerfile  entrypoint.sh
sandbox/starter/: index.html  vite.config.js
sandbox/starter/src/: App.jsx
