[project]
name = "soxai-playground"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "docker>=7.0.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.7.0",
    "websockets>=13.0",
]

[tool.setuptools]
packages = ["api"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
